
SET(LIB_NAME     testActorLibrary)
file(GLOB LIB_SOURCES "*.cpp" "*.h")

ADD_DEFINITIONS(-DdSINGLE)

ADD_LIBRARY(${LIB_NAME} SHARED  
   ${LIB_SOURCES}
)

LINK_WITH_VARIABLES(${LIB_NAME} 
		DTCORE_LIBRARY
		DTUTIL_LIBRARY
		DTABC_LIBRARY
		DTACTORS_LIBRARY
		OSG_LIBRARY
		OSGDB_LIBRARY
)

SET_TARGET_PROPERTIES(${LIB_NAME}
                     PROPERTIES DEFINE_SYMBOL DT_PLUGIN)

include(ModuleInstall OPTIONAL)

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PROJECT_LABEL "Lib ${LIB_NAME}")
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES FOLDER "Study_Delta3D") 
