SET(_my_target_name Printer)

IF(BUILDICE_TYPE_SERVER)
    SET(TARGET_NAME ${_my_target_name}_Server)
	
	#VIRE_MAKE_CLASS(${TARGET_NAME}
		#TO_PATH ${CMAKE_CURRENT_LIST_DIR}/../Printer
		#PrinterI
	#)
    SEARCH_FILE_TO_VAL(LIB_SOURCES 
		Server
	)

	SEARCH_DIR_FILE_TO_VAL(LIB_SOURCES 
		${CMAKE_CURRENT_LIST_DIR}/../Printer
		Printer 
		PrinterI
		PrinterCallBackI
	)
ELSE()
    SET(TARGET_NAME ${_my_target_name}_Client)

	#VIRE_MAKE_CLASS(${TARGET_NAME}
		#TO_PATH ${CMAKE_CURRENT_LIST_DIR}/../Printer
		#PrinterCallBackI
	#)

	VIRE_MAKE_CLASS(${TARGET_NAME}
		#LoginCallBackI
		#MyClass1
	)
    SEARCH_FILE_TO_VAL(LIB_SOURCES 
    	Client
    )
	SEARCH_DIR_FILE_TO_VAL(LIB_SOURCES 
		${CMAKE_CURRENT_LIST_DIR}/../Printer
		Printer 
		PrinterCallBackI
	)
ENDIF()

ADD_EXECUTABLE(${TARGET_NAME}  
   ${LIB_SOURCES}
)

include_directories(
	${ICE_INCLUDE_DIR}
	${UTILITYKIT_INCLUDE_DIR}
	${JSONCPP_INCLUDE_DIR}
	${PROJECT_INCLUDE_DIR}
	${CMAKE_CURRENT_LIST_DIR}/../${_my_target_name}
)

ADD_3RD_DEPENDENCIES(${TARGET_NAME}
	UTILITYKIT
	JSONCPP
)

target_link_libraries(${TARGET_NAME} 
	ICE::ICE
	ICE::ICEUTIL
)

LINK_WITH_VARIABLES(${TARGET_NAME} 
	
)

SET_TARGET_PROPERTIES(${TARGET_NAME} 
	PROPERTIES FOLDER "ice") 
SET_TARGET_PROPERTIES(${TARGET_NAME} 
	PROPERTIES 
	DEBUG_OUTPUT_NAME "${TARGET_NAME}${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${TARGET_NAME} 
	PROPERTIES 
	RELEASE_OUTPUT_NAME "${TARGET_NAME}${CMAKE_RELEASE_POSTFIX}")

SET(DEST_FILE_DIR ${PROJECT_SOURCE_DIR}/bin/)
MESSAGE(STATUS "....${DEST_FILE_DIR}/${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}")

add_custom_command(TARGET  ${TARGET_NAME} PRE_BUILD
	  COMMAND echo "delete  ${TARGET_NAME}.exe..."
	  COMMAND ${CMAKE_COMMAND} -E remove 
	  	${DEST_FILE_DIR}/debug/${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}.exe
	  COMMAND ${CMAKE_COMMAND} -E remove 
	  	${DEST_FILE_DIR}/release/${TARGET_OUTPUT_NAME}${CMAKE_RELEASE_POSTFIX}.exe
)

