GET_CUR_DIR_NAME(${CMAKE_CURRENT_LIST_DIR} dir_name)
SET(APPLICATION_NAME ${dir_name})

#设置CMake环境变量
SET(VIRE_COMMON_COMPILER_FLAGS " -DNOMINMAX -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE")

SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMTD")
  
ADD_DEFINITIONS("${VIRE_COMMON_COMPILER_FLAGS}")
 
#export classes 
#VIRE_MAKE_EXPORT_CLASS(${LIB_NAME} ${RDGEWS_INCLUDE_DIR}/${LIB_NAME}
	#WhiteSystemControl
#)

#inner class

# 设置头文件
FILE(GLOB ${APPLICATION_NAME}_HEADERS "*.h")

# 设置cpp代码
FILE(GLOB ${APPLICATION_NAME}_SRCS "*.cpp")

ADD_EXECUTABLE(${APPLICATION_NAME} 
   ${${APPLICATION_NAME}_SRCS}
   ${${APPLICATION_NAME}_HEADERS}   
)

target_link_libraries(${APPLICATION_NAME}
	${Boost_DATE_TIME_LIBRARY}
)

# 设置工程的属性
SET (TARGET_OUTPUT_NAME ${APPLICATION_NAME} )
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES OUTPUT_NAME ${TARGET_OUTPUT_NAME} )
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES RELEASE_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_RELEASE_POSTFIX}")
 
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES PROJECT_LABEL "App ${APPLICATION_NAME}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES FOLDER "Study_OSG/${SUB_FOLDER_NAME}") 

#输出到上级目录，取消debug, release 目录

IF (MSVC_IDE) 
	SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/bin )
	SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin/Debug )
	SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin/Release)
ENDIF() 

#输出到上级目录，取消debug, release 目录
VIRE_SET_TARGET_BIN(${APPLICATION_NAME} ${THIS_FOLDER_NAME} PROJECT_LABEL_PREFIX app)
  







