SET(APPLICATION_NAME test_002)

SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMTD")
  
ADD_DEFINITIONS(-DCONSOLE -DGLUT_NO_LIB_PRAGMA)

#link_directories(${THIS_OPENGL_LIB_DIR})

FIND_PACKAGE(FreeGLUT REQUIRED)
INCLUDE_DIRECTORIES(${FREEGLUT_INCLUDE_DIR})

FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})    

INCLUDE_DIRECTORIES(${THIS_OPENGL_HEADER_DIR}) 

FILE(GLOB ${APPLICATION_NAME}_SRCS "*.cpp" )
FILE(GLOB ${APPLICATION_NAME}_HEADERS "./*.h")


#打包相关文件成可执行文件
ADD_EXECUTABLE(${APPLICATION_NAME} 
   ${${APPLICATION_NAME}_HEADERS}
   ${${APPLICATION_NAME}_SRCS}
   ${THIS_OPENGL_LIB_DIR}/LoadShaders.cpp
)

#设置Link依赖包
#TARGET_LINK_LIBRARIES(${APPLICATION_NAME}
#)

LINK_WITH_VARIABLES(${APPLICATION_NAME}
FREEGLUT_LIBRARY
GLEW_LIBRARY
 )
 
#设置Link依赖包
TARGET_LINK_LIBRARIES(${APPLICATION_NAME}
	
)

SET (TARGET_OUTPUT_NAME ${APPLICATION_NAME} )
SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES OUTPUT_NAME ${TARGET_OUTPUT_NAME} )
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES RELEASE_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_RELEASE_POSTFIX}")

SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES PROJECT_LABEL "App ${APPLICATION_NAME}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES FOLDER ${THIS_FOLDER_NAME}) 

my_add_link_flags(${APPLICATION_NAME} "/SAFESEH:NO")
