SET(APPLICATION_NAME 001_P026)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules")

SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMTD")
  
ADD_DEFINITIONS(-DCONSOLE)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})  


INCLUDE_DIRECTORIES(${DEFAULT_INCLUDE_SUBDIR})  
# 设置头文件

FILE(GLOB ${APPLICATION_NAME}_SRCS "*.cpp" )
FILE(GLOB ${APPLICATION_NAME}_HEADERS "./*.h")

#打包相关文件成可执行文件
ADD_EXECUTABLE(${APPLICATION_NAME} 
   ${${APPLICATION_NAME}_HEADERS}
   ${${APPLICATION_NAME}_SRCS}
)

#设置Link依赖包
#TARGET_LINK_LIBRARIES(${APPLICATION_NAME}
#)

LINK_WITH_VARIABLES(${APPLICATION_NAME}
		OSG_LIBRARY
		OSGTEXT_LIBRARY
		OSGDB_LIBRARY
		OSGGA_LIBRARY
		OSGFX_LIBRARY
		OSGVIEWER_LIBRARY
		OSGPARTICLE_LIBRARY
		OSGUTIL_LIBRARY
		OPENTHREADS_LIBRARY
 )

SET (TARGET_OUTPUT_NAME ${APPLICATION_NAME} )
SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES OUTPUT_NAME ${TARGET_OUTPUT_NAME} )
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES RELEASE_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_RELEASE_POSTFIX}")

SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES PROJECT_LABEL "App ${APPLICATION_NAME}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES FOLDER "Study_OSG/${SUB_FOLDER_NAME}") 
