SET(APPLICATION_NAME T04_P105_Delaunay)

SET(APPLICATION_DESCRIPTION_SUMMARY  "测试")
MESSAGE("**********************Setting up ${APPLICATION_NAME}********************")

# 定义项目版本
SET(CPACK_PACKAGE_VERSION_MAJOR 1)
SET(CPACK_PACKAGE_VERSION_MINOR 1)
SET(CPACK_PACKAGE_VERSION_PATCH 1)

SET(APPLICATION_VERSION  ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
SET(RELEASE_NAME APPLICATION_DESCRIPTION_SUMMARY)
# Note the version no is Mmmpp for Major/minor/patch, 0-padded, thus '10100' for 1.1.0
SET(APPLICATION_VERSION_INT 10000)
MESSAGE("Application version:" ${APPLICATION_VERSION})


#设置CMake环境变量
SET(VIRE_COMMON_COMPILER_FLAGS " -DNOMINMAX -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE")

SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMTD")
  
ADD_DEFINITIONS("${VIRE_COMMON_COMPILER_FLAGS}")
 
# 设置头文件
FILE(GLOB ${APPLICATION_NAME}_HEADERS "./*.h")
INCLUDE_DIRECTORIES(${DEFAULT_INCLUDE_SUBDIR})  

# 设置cpp代码
FILE(GLOB ${APPLICATION_NAME}_SRCS "*.cpp")

IF(WIN32)
	# Add the resource file for the icon.
    SET( ${APPLICATION_NAME}_SRCS ${${APPLICATION_NAME}_SRCS})
ENDIF(WIN32)

ADD_EXECUTABLE(${APPLICATION_NAME} 
   ${${APPLICATION_NAME}_SRCS}
   ${${APPLICATION_NAME}_HEADERS}   
	)

# 设置Link依赖包
LINK_WITH_VARIABLES_EX(${APPLICATION_NAME}
    OSG
    QTUTILITY
    GLOG
    
    ADDITION_LIBRARY 
    OSGVIEWER 
    OSGDB
    OSGGA
    OSGSIM
    OSGUTIL
    OSGQT
    OSGTEXT
    OPENTHREADS
    )

 TARGET_LINK_LIBRARIES(${APPLICATION_NAME}	
)

# 设置工程的属性
SET (TARGET_OUTPUT_NAME ${APPLICATION_NAME} )
SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES OUTPUT_NAME ${TARGET_OUTPUT_NAME} )
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES RELEASE_OUTPUT_NAME "${TARGET_OUTPUT_NAME}${CMAKE_RELEASE_POSTFIX}")
 
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES PROJECT_LABEL "App ${APPLICATION_NAME}")
SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES FOLDER "Study_OSG/${SUB_FOLDER_NAME}") 
 
#输出到上级目录，取消debug, release 目录
IF (MSVC_IDE) 
	SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/bin )
	SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin/Debug )
	SET_TARGET_PROPERTIES( ${APPLICATION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin/Release)
ENDIF() 
  
	
# present the packaging option only if we have the cpack command defined (effectively >= 2.6.0)
IF(CMAKE_CPACK_COMMAND)
    OPTION(BUILD_VIRE_PACKAGES "Set to ON to generate CPack configuration files and packaging targets" OFF)
    IF(BUILD_VIRE_PACKAGES)
      INCLUDE(VIRECPack)
    ENDIF(BUILD_VIRE_PACKAGES)
ENDIF(CMAKE_CPACK_COMMAND)

INSTALL(CODE "MESSAGE(\"Installing App:${APPLICATION_NAME}..\")")







